--- a/.prettierignore
+++ b/.prettierignore
@@ -5,4 +5,8 @@ coverage/
 artifacts/
 client/dist/
 server/dist/
-client/src/crypto/libsignal-protocol.js
+client/src/crypto/libsignal-protocol/
+test/crypto/wycheproof.test.mjs
+docs/api/openapi.yaml
+docs/CRYPTO-DESIGN.md
+slides/deck.md
