--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "buffer": "^6.0.3",
     "jwt-decode": "^4.0.0",
-    "libsignal-protocol": "file:src/crypto/libsignal-protocol.js",
+    "libsignal-protocol": "file:src/crypto/libsignal-protocol",
     "node-forge": "^1.3.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
