--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,7 @@
     "dev": "nodemon index.js",
     "build": "echo 'server: no build step'",
     "lint": "echo 'server: lint not configured'",
-    "test": "node --test test/**/*.test.js"
+    "test": "node --test test"
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
@@ -22,6 +22,7 @@
     "libsignal-protocol": "^1.3.15",
     "mongoose": "^8.14.2",
     "morgan": "^1.10.0",
+    "prom-client": "^15.1.2",
     "node-forge": "^1.3.1",
     "redis": "^4.7.1",
     "socket.io": "^4.8.1"
