Align JWT signing and verification

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,10 @@ PORT=
 MONGO_URL=
 REDIS_URL=
 JWT_SECRET=
+JWT_ALGORITHM=
+JWT_PUBLIC_KEY=
+JWT_PRIVATE_KEY=
+JWT_KID=
 JWT_ISSUER=
 JWT_AUDIENCE=
 RATE_LIMIT_WINDOW_MS=
