Harden auth pipeline and secure key exchange

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,8 @@ RATE_LIMIT_WINDOW_MS=
 RATE_LIMIT_MAX=
 CIPHERTEXT_MAX_BYTES=
 REPLAY_TTL_SECONDS=
+REPLAY_FALLBACK_CAP=
+KEYBUNDLE_REQUIRE_ALLOWLIST=
 VITE_API_BASE_URL=
 E2E_BASE_URL=
 E2E_API_URL=
